# api_automacao_sinapse

./: .gitignore  create_table.py  create_user.py  gunicorn_conf.py  main.py  pyproject.toml  sqldblite.db
api/v1/: api.py
api/v1/endpoint/: auth.py  corretor.py  despesas.py  etapa_lead.py  imoveis.py  lead.py  propietario.py  receitas.py  resumo.py  usuarios.py
core/: auth.py  config.py  criar_codigo.py  database.py  deps.py  security.py
models/: __all_models.py  corretor_model.py  despesas_model.py  etapa_lead_model.py  imoveis_model.py  lead_model.py  proprietario_model.py  proprietario_schema.py  receitas_model.py  usuarios_model.py
schemas/: corretor_Schemas.py  despesas_schemas.py  etapa_lead_schema.py  imovel_schema.py  lead_schemas.py  propietario_schemas.py  receitas_schemas.py  resumo_schemas.py  usuarios_schemas.py
